fix(Footer): fixed-z-index-issue.
fixed an issue where the footer was nnto getting blurred even when modal was opened.

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  z-index: 2;
+  z-index: 1;
   justify-content: 'space-between',
 }
 
